# vedirect-influx

./: .coderabbit.yaml  .gitignore  .gitleaks.toml  .pre-commit-config.yaml  .yamllint.yaml  AGENTS.md  LICENSE  README.md  pyproject.toml
.github/workflows/: ci.yml
deploy/: config.example.yaml  grafana-victron-ble.json  grafana-victron.json  vedirect-influx.service
docs/: VRM.md  vcr-component-assembly-scope.md
scripts/: screenshot-dashboard.py
skills/vedirect-influx/: SKILL.md
tests/: test_ble.py  test_cli_wiring.py  test_history.py  test_ipc.py  test_multisink.py  test_reader_vreg.py  test_text.py  test_vreglink.py  test_vrm.py  test_vrm_mqtt.py  test_vrm_sink.py
tests/fixtures/: history_mppt7515.txt
vedirect_influx/: __init__.py  ble.py  cli.py  config.py  history.py  ipc.py  protocol.py  reader.py  text.py  vreglink.py  vreglink_service.py  vrm.py
vedirect_influx/_vendor/: __init__.py  vedbus.py
vedirect_influx/sinks/: __init__.py  base.py  influx.py  multi.py  stdout.py  vrm.py  vrm_mqtt.py
