[build-system]
requires = ["setuptools>=61"]
build-backend = "setuptools.build_meta"

[project]
name = "vedirect-influx"
version = "0.1.0"
description = "Read Victron VE.Direct text + HEX daily-history and ingest into InfluxDB"
readme = "README.md"
license = { text = "MIT" }
requires-python = ">=3.9"
authors = [{ name = "ckeller42" }]
keywords = ["victron", "ve.direct", "vedirect", "mppt", "solar", "influxdb", "grafana"]
dependencies = [
    "pyserial>=3.5",
    "influxdb-client>=1.36",
    "PyYAML>=6.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7",
    "pytest-cov>=4",
    "ruff>=0.6",
    "mypy>=1.8",
    "codespell>=2.2",
    "pip-audit>=2.7",
    "pre-commit>=3.5",
    "build>=1.0",
    "twine>=5.0",
]
# VictronConnect-Remote: the VregLink D-Bus service (Linux/Pi only). Needs the
# system D-Bus + GLib; not installable/importable on macOS dev machines.
vcr = [
    "dbus-python>=1.3",
    "PyGObject>=3.46",
]
# Bluetooth source: read the SmartSolar over BLE "Instant Readout" instead of VE.Direct USB.
ble = [
    "victron-ble>=0.9",
    "bleak>=0.21",
]

[project.scripts]
vedirect-influx = "vedirect_influx.cli:main"
vedirect-influx-vreglink = "vedirect_influx.vreglink_service:main"

[project.urls]
Homepage = "https://github.com/ckeller42/vedirect-influx"
Repository = "https://github.com/ckeller42/vedirect-influx"
Issues = "https://github.com/ckeller42/vedirect-influx/issues"

[tool.setuptools.packages.find]
include = ["vedirect_influx*"]

[tool.setuptools.package-data]
vedirect_influx = ["ccgx-ca.pem"]

[tool.pytest.ini_options]
# importlib mode avoids duplicate-module collisions when --doctest-modules
# imports the package modules alongside the test modules. The VregLink service
# and the vendored velib code import dbus/GLib (Pi only), so they are excluded
# from doctest collection; they are syntax-checked and integration-tested instead.
addopts = "--doctest-modules --import-mode=importlib --ignore=vedirect_influx/vreglink_service.py --ignore=vedirect_influx/_vendor"
testpaths = ["vedirect_influx", "tests"]

[tool.ruff]
line-length = 100
extend-exclude = ["vedirect_influx/_vendor"]  # vendored third-party (velib_python)
target-version = "py39"

[tool.ruff.lint]
# E/F=pyflakes+pycodestyle, I=isort, UP=pyupgrade, B=bugbear, D=pydocstyle
select = ["E", "F", "I", "UP", "B", "D"]
# D203/D213 conflict with D211/D212; pep257 convention picks the consistent set.
# D102/D105/D107: don't force docstrings on every method/dunder/__init__ (kept
# concise per project preference); modules, classes and public functions still required.
ignore = ["D203", "D213", "D102", "D105", "D107"]

[tool.ruff.lint.pydocstyle]
convention = "pep257"

[tool.ruff.lint.per-file-ignores]
"tests/*" = ["D"]  # tests don't need docstrings

[tool.mypy]
python_version = "3.10"  # type-check semantics; runtime still supports 3.9
ignore_missing_imports = true  # pyserial / influxdb_client ship no stubs
warn_unused_ignores = true
exclude = ["vedirect_influx/_vendor/"]

[[tool.mypy.overrides]]
module = "vedirect_influx._vendor.*"  # vendored velib_python; not our code
follow_imports = "skip"
ignore_errors = true

[tool.codespell]
skip = ".git,*.png,tests/fixtures/*,dist,build,*.egg-info,deploy/grafana-victron.json,*/_vendor,*/_vendor/*"
ignore-words-list = "ot,ser"  # short tokens: flux/JSON data, ser=serial var
